gccida/g2/dump_maybe_newline
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_maybe_newline/src/tree-dump.c:626:24: error: use of undeclared identifier 'asc_707673'
fprintf( di_0->stream, asc_707673, 25LL, 6551391LL); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_maybe_newline/src/tree-dump.c:635:24: error: use of undeclared identifier 'off_707674'
fprintf( di_0->stream, off_707674, 15 - v2, 6551391LL); 
                       ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dump_maybe_newline/src/obj/tree-dump.o] Error 1
